--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 
 *{
     background-color: bisque;
+    border: 2px solid red;
 }
 
 
@@ -27,12 +28,13 @@ h3{
     text-align: left;
 }
 
-#image{
-    height: auto;
-    margin-left: auto;
+img{
+    display: block;
+    width: 30%;
+    height:30%;
+    object-fit: contain;
+    margin-left:auto;
     margin-right: auto;
-    width:15%;
-}
 
 
 
